Changed color attributes

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -197,12 +197,14 @@ a:hover{
   font-size: 10px;
   text-align: left;
   margin-left: 2%;
+  color: #66BFBF;
 }
 
 .flaticon-attribute-freepik{
   font-size: 10px;
   text-align: left;
   margin-left: 2%;
+  color: #66BFBF;
 }
 
 .bockarns{
@@ -211,3 +213,4 @@ a:hover{
   margin-right: 2%;
 
 }
+
