Mountain img size solved

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -64,6 +64,10 @@ a:hover {
   overflow: hidden;
 }
 
+.mountain-img {
+  width: auto;
+}
+
 .pro {
   text-decoration: underline;
 }
@@ -203,6 +207,8 @@ a:hover {
   float: right;
   margin-right: 2%;
 }
+
+/* Molneffekt */
 .cloud {
   position: absolute;
   left: 0; /* 👈 ankare */
@@ -248,5 +254,8 @@ a:hover {
   .skill-row {
     width: 70%;
     padding: 10%;
+  }
+  .mountain-img {
+    width: 70%;
   }
 }
