--- a/CSS/cv.css
+++ b/CSS/cv.css
@@ -11,6 +11,10 @@ body {
   font-style: normal;
   background-color: #1a7474;
 }
+dd {
+  margin-left: 10px;
+  line-height: 26px;
+}
 
 .wrapper {
   margin: auto;
@@ -28,7 +32,7 @@ body {
   border-radius: 2px;
   display: grid;
   grid-template-columns: 1.5fr 3fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 1fr 1fr 2fr 2fr;
 }
 .top-container {
   display: flex;
@@ -39,13 +43,14 @@ body {
   grid-column: span 2;
   border-bottom: solid #2e70ae 2px;
 }
-.introduction {
+.main-content {
   border-left: solid #2e70ae 2px;
   margin-left: 10px;
   padding: 10px;
 }
 .contactinfo {
   padding: 10px;
+  grid-row: span 3;
 }
 .name-title {
   justify-self: baseline;
